[package]
name = "rsmanuf"
description = "📇 A very simple Rust library to get the manufacturer of a specific MAC address"
authors = ["Krypton <root@krypton.ninja>"]
version = "2026.2.1"
documentation = "https://docs.rs/rsmanuf"
categories = ["network-programming"]
license = "MIT"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/LICENSE.md",
    "/README.md",
    "/SECURITY.md",
    "/examples/**",
    "/src/**",
    "/tests/**",
    "manuf.txt",
]
keywords = ["network", "mac", "manufacturer", "mac-address"]
repository = "https://github.com/kkrypt0nn/rsmanuf"
edition = "2021"

[package.metadata.files]
include = ["manuf.txt"]

[[example]]
name = "online"
required-features = ["online"]

[features]
online = ["dep:arc-swap", "dep:reqwest"]

[dependencies]
arc-swap = { version = "1.7.1", optional = true }
regex = "1.10.2"
reqwest = { version = "0.12.12", features = ["blocking"], optional = true }
